@@ -1,5 +1,6 @@
 Version ??.? (20??-??-??)
 -------------------------
+- New button to duplicate a custom command [https://github.com/clechasseur/pathcopycopy/issues/114]
 - Icon selected for Copy Long Path command now shows up in main menu too [https://github.com/clechasseur/pathcopycopy/issues/110]
 - Following symbolic links work even if the symbolic link is part of the path and not its target [https://github.com/clechasseur/pathcopycopy/issues/118]
 
